--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
 <style>
     form{
-    margin-left: 40%;
-    margin-top: 2%;
+    margin-left: 3%;
    
     }
     .form-control{
         width:35% ;
+    }
+    @media(max-width:650px){
+      .form-control{
+        width:85% ;
+    } 
+      
     }
     .sign{
         background-color: rgb(0, 0, 255);
@@ -24,6 +29,8 @@
         height: 40px;
     }
     .h1{
+    margin-left: 2%;
+
       font-size: 40px;
       font-weight: bold;
       font-family: Georgia, 'Times New Roman', Times, serif;
@@ -37,9 +44,9 @@
     <input type="name" id="name" placeholder="name"  style="width: 30%;">
     <br>
     <input type="password" id="password" placeholder="password"  style="width: 30%;">
-    <br> -->
+    <br> 
 
-  <center> <h1 class="h1">World's Best Products</h1></center> 
+   <center> --><h1 class="h1">World's Best Products</h1><!-- </center>  -->
     <form>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">NAME</label>
